versioned_docs/version-2.18/reference/targets/package_json.mdx
---
title: package_json
description: |
  A package.json file describing a nodejs package. (https://nodejs.org/api/packages.html#introduction)
---

import Field from "@site/src/components/reference/Field";
import styles from "@site/src/components/reference/styles.module.css";

---

A package.json file describing a nodejs package. (https://nodejs.org/api/packages.html#introduction)

Generates a `node_package` target for the package.

Generates `node_third_party_package` targets for each specified 3rd party dependency (e.g. in the package.json#devDependencies field).

Backend: <span className="color--primary">`pants.backend.experimental.javascript`</span>

---

<span className={styles.options}>

## `dependencies`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
>

Addresses to other targets that this target depends on, e.g. `['helloworld/subdir:lib', 'helloworld/main.py:lib', '3rdparty:reqs#django']`.

This augments any dependencies inferred by Pants, such as by analyzing your imports. Use `pants dependencies` or `pants peek` on this target to get the final result.

See https://www.pantsbuild.org/v2.18/docs/targets for more about how addresses are formed, including for generated targets. You can also run `pants list ::` to find all addresses in your project, or `pants list dir` to find all addresses defined in that directory.

If the target is in the same BUILD file, you can leave off the BUILD file path, e.g. `:tgt` instead of `helloworld/subdir:tgt`. For generated first-party addresses, use `./` for the file path, e.g. `./main.py:tgt`; for all other generated targets, use `:tgt#generated_name`.

You may exclude dependencies by prefixing with `!`, e.g. `['!helloworld/subdir:lib', '!./sibling.txt']`. Ignores are intended for false positives with dependency inference; otherwise, simply leave off the dependency from the BUILD file.

</Field>

## `description`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
>

A human-readable description of the target.

Use `pants list --documented ::` to see all targets with descriptions.

</Field>

## `scripts`

<Field
    type_repr={`Iterable[Any] | None`}
    default_repr={`()`}
>

Custom node package manager scripts that should be known and ran as part of relevant goals.

Maps the package.json#scripts section to a cacheable pants invocation.

</Field>

## `source`

<Field
    type_repr={`str | None`}
    default_repr={`'package.json'`}
>

A single file that belongs to this target.

Path is relative to the BUILD file&#x27;s directory, e.g. `source='example.ext'`.

</Field>

## `tags`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
>

Arbitrary strings to describe a target.

For example, you may tag some test targets with &#x27;integration_test&#x27; so that you could run `pants --tag='integration_test' test ::` to only run on targets with that tag.

</Field>

</span>
